add is_liked method to User Model, update liked route to handle adding and removing likes, update home.html to use is_liked method to toggle like icon color

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,12 +52,11 @@
               <p>{{ msg.text }}</p>
             </div>
             {% if msg.user.id != curr_user_id%}
-            <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+            <form method="POST" action="/users/like/{{ msg.id }}" id="messages-form">
               <button class="
                 btn 
                 btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
-              >
+                {{'btn-primary' if g.user.is_liked(msg.id) else 'btn-secondary'}}">
                 <i class="fa fa-thumbs-up"></i> 
               </button>
               {% endif %}
