moved add_like, remove_like to seperate routes & add logic to home.html to hide/show like add or remove forms. add like.html view page and like view route.

--- a/templates/home.html
+++ b/templates/home.html
@@ -51,14 +51,24 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
-            {% if msg.user.id != curr_user_id%}
-            <form method="POST" action="/users/like/{{ msg.id }}" id="messages-form">
-              <button class="
+            {% if msg.user.id != curr_user_id %}
+              {% if g.user.is_liked(msg.id) %}
+              <form method="POST" action="/users/remove_like/{{ msg.id }}" id="messages-form">
+               <button class="
                 btn 
                 btn-sm 
-                {{'btn-primary' if g.user.is_liked(msg.id) else 'btn-secondary'}}">
+                btn-primary">
                 <i class="fa fa-thumbs-up"></i> 
-              </button>
+               </button>
+               {% else %}
+                <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+                 <button class="
+                  btn 
+                  btn-sm 
+                  btn-secondary">
+                  <i class="fa fa-thumbs-up"></i> 
+                 </button>
+                {% endif %}
               {% endif %}
             </form>
           </li>
