--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -1,42 +1,26 @@
-{% extends 'base.html' %}
+{% extends 'users/detail.html' %}
+{% block user_details %}
+  <div class="col-sm-6">
+    <ul class="list-group" id="messages">
 
-{% block content %}
+      {% for message in messages %}
 
-  <div class="bg"></div>
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <ul class="list-group no-hover" id="messages">
         <li class="list-group-item">
-          <a href="{{ url_for('users_show', user_id=message.user.id) }}">
-            <img src="{{ message.user.image_url }}" alt="" class="timeline-image">
+          <a href="/messages/{{ message.id }}" class="message-link"/>
+
+          <a href="/users/{{ message.user.id }}">
+            <img src="{{ message.user.image_url }}" alt="user image" class="timeline-image">
           </a>
+
           <div class="message-area">
-            <div class="message-heading">
-              <a href="/users/{{ message.user.id }}">@{{ message.user.username }}</a>
-              {% if g.user %}
-                {% if g.user.id == message.user.id %}
-                  <form method="POST"
-                        action="/messages/{{ message.id }}/delete">
-                    <button class="btn btn-outline-danger">Delete</button>
-                  </form>
-                {% elif g.user.is_following(message.user) %}
-                  <form method="POST"
-                        action="/users/stop-following/{{ message.user.id }}">
-                    <button class="btn btn-primary">Unfollow</button>
-                  </form>
-                {% else %}
-                  <form method="POST" action="/users/follow/{{ message.user.id }}">
-                    <button class="btn btn-outline-primary btn-sm">Follow</button>
-                  </form>
-                {% endif %}
-              {% endif %}
-            </div>
-            <p class="single-message">{{ message.text }}</p>
+            <a href="/users/{{ message.user.id }}">@{{ message.user.username }}</a>
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+            <p>{{ message.text }}</p>
           </div>
         </li>
-      </ul>
-    </div>
-  </div>
 
+      {% endfor %}
+
+    </ul>
+  </div>
 {% endblock %}
