--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -6,14 +6,14 @@
       {% for message in messages %}
 
         <li class="list-group-item">
-          <a href="/messages/{{ message.id }}" class="message-link"/>
+          <a href="{{ url_for('messages_show', message_id=message.id)}}" class="message-link"/>
 
-          <a href="/users/{{ message.user.id }}">
+          <a href="{{ url_for('users_show', user_id=message.user.id)}}">
             <img src="{{ message.user.image_url }}" alt="user image" class="timeline-image">
           </a>
 
           <div class="message-area">
-            <a href="/users/{{ message.user.id }}">@{{ message.user.username }}</a>
+            <a href="{{ url_for('users_show', user_id=message.user.id)}}">@{{ message.user.username }}</a>
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
             <p>{{ message.text }}</p>
           </div>
