--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -30,6 +30,9 @@
           <a href="{{ url_for('users_show', user_id=user_id)}}" class="btn btn-outline-secondary">Cancel</a>
         </div>
       </form>
+      <div class="row">
+        <a href="{{ url_for('edit_password')}}" class="btn btn-primary m-5">Edit your password</a>
+      </div>
     </div>
   </div>
 
